--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
