--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
     "path": "^0.12.7",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "@sendgrid/mail": "^7.7.0",
+    "nanoid": "3.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
