--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "mongoose": "^7.3.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "@sendgrid/mail": "^7.7.0",
+    "nanoid": "3.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
