--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Valerka4052/goit_so_yummy_backend#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.37.3",
     "cors": "^2.8.5",
@@ -30,9 +31,9 @@
     "mongoose": "^7.3.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "path": "^0.12.7",
-    "@sendgrid/mail": "^7.7.0",
-    "nanoid": "3.3.4"
+    "nanoid": "3.3.4",
+    "nodemailer": "^6.9.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
