--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "3.3.4",
     "nodemailer": "^6.9.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
