--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nanoid": "3.3.4",
     "nodemailer": "^6.9.3",
     "path": "^0.12.7",
+    "shortid": "^2.2.16",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
