--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
  SECRET_KEY={nYf}?:U,PI/^4>Pb"Qw`fa`oS2J1D;
+ GOOGLE_CLIENT_ID = 112833128024-emj448kcbhnbi8fcc28un9l3cl9mhmf5.apps.googleusercontent.com;
+ GOOGLE_CLIENT_SECRET = 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;
